@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-07T00:23:21Z",
-  "count_outdated" : 74,
-  "uniques_outdated" : 57,
+  "timestamp" : "2024-02-18T16:00:50Z",
+  "count_outdated" : 75,
+  "uniques_outdated" : 58,
   "count" : 77,
   "uniques" : 60,
   "clones" : [
-    {
-      "timestamp": "2024-02-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-06T00:00:00Z",
       "count": 2,
